# assorted

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  Binary plist format.asciidoc  ChangeLog  Chrome Cache file format.asciidoc  Format working document template.asciidoc  Jump lists format.asciidoc  Makefile.am  README  RecentFileCache.bcf format.asciidoc  Restore point formats.asciidoc  Restore point log (rp.log).asciidoc  acinclude.m4  assorted.ini  autogen.ps1  build.ps1  configure.ac  runtests.sh  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.travis/: before_install.sh  run_with_timeout.sh  runtests.sh  script.sh  script_docker.sh
common/: types.h.in
documentation/: ADC compressed data format.asciidoc  Apple System Log (ASL) file format.asciidoc  Apple partition map (APM) format.asciidoc  BSM event auditing file format.asciidoc  BZIP2 compressed data format.asciidoc  Binary plist format.asciidoc  CUPS Internet Printing Protocol format.asciidoc  Cabinet (CAB) format.asciidoc  Chrome Cache file format.asciidoc  Copy in and out (CPIO) archive format.asciidoc  Deflate (zlib) compressed data format.asciidoc  Firefox Cache file format.asciidoc  Format working document template.asciidoc  Job file format.asciidoc  Jump lists format.asciidoc  LZFSE compressed data format.asciidoc  LZMA compressed data format.asciidoc  LZVN compressed data format.asciidoc  LZX compressed data format.asciidoc  (+12 more)
m4/: lzma.m4
msvscpp/: Makefile.am  assorted.sln
msvscpp/adcdecompress/: adcdecompress.vcproj
msvscpp/adler32sum/: adler32sum.vcproj
msvscpp/ascii7decompress/: ascii7decompress.vcproj
msvscpp/assorted_test_adc/: assorted_test_adc.vcproj
msvscpp/assorted_test_adler32/: assorted_test_adler32.vcproj
msvscpp/assorted_test_ascii7/: assorted_test_ascii7.vcproj
msvscpp/assorted_test_bit_stream/: assorted_test_bit_stream.vcproj
msvscpp/assorted_test_bzip/: assorted_test_bzip.vcproj
msvscpp/assorted_test_crc32/: assorted_test_crc32.vcproj
msvscpp/assorted_test_crc64/: assorted_test_crc64.vcproj
msvscpp/assorted_test_deflate/: assorted_test_deflate.vcproj
msvscpp/assorted_test_fletcher32/: assorted_test_fletcher32.vcproj
msvscpp/assorted_test_fletcher64/: assorted_test_fletcher64.vcproj
msvscpp/assorted_test_huffman_tree/: assorted_test_huffman_tree.vcproj
msvscpp/assorted_test_lzfse/: assorted_test_lzfse.vcproj
msvscpp/assorted_test_lzfu/: assorted_test_lzfu.vcproj
msvscpp/assorted_test_lzma/: assorted_test_lzma.vcproj
msvscpp/assorted_test_lzvn/: assorted_test_lzvn.vcproj
msvscpp/assorted_test_lzx/: assorted_test_lzx.vcproj
msvscpp/assorted_test_xor32/: assorted_test_xor32.vcproj
msvscpp/assorted_test_xor64/: assorted_test_xor64.vcproj
msvscpp/banalyze/: banalyze.vcproj
msvscpp/bz2decompress/: bz2decompress.vcproj
msvscpp/bzip2/: bzip2.vcproj
msvscpp/crc32sum/: crc32sum.vcproj
msvscpp/crc64sum/: crc64sum.vcproj
msvscpp/fletcher32sum/: fletcher32sum.vcproj
msvscpp/fletcher64sum/: fletcher64sum.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcrypto/: libfcrypto.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfmos/: libfmos.vcproj
msvscpp/libfplist/: libfplist.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libfwevt/: libfwevt.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libhmac/: libhmac.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/lzfsedecompress/: lzfsedecompress.vcproj
msvscpp/lzfudecompress/: lzfudecompress.vcproj
msvscpp/lzmadecompress/: lzmadecompress.vcproj
msvscpp/lznt1decompress/: lznt1decompress.vcproj
msvscpp/lzvndecompress/: lzvndecompress.vcproj
msvscpp/lzxdecompress/: lzxdecompress.vcproj
msvscpp/lzxpressdecompress/: lzxpressdecompress.vcproj
msvscpp/mssearchdecode/: mssearchdecode.vcproj
msvscpp/plistinfo/: plistinfo.vcproj
msvscpp/rc4crypt/: rc4crypt.vcproj
msvscpp/serpentcrypt/: serpentcrypt.vcproj
msvscpp/unicodetouch/: unicodetouch.vcproj
msvscpp/wevtinfo/: wevtinfo.vcproj
msvscpp/winregsave/: winregsave.vcproj
msvscpp/winshellfolder/: winshellfolder.vcproj
msvscpp/winshelllink/: winshelllink.vcproj
msvscpp/xor32sum/: xor32sum.vcproj
msvscpp/xor64sum/: xor64sum.vcproj
msvscpp/zcompress/: zcompress.vcproj
msvscpp/zdecompress/: zdecompress.vcproj
msvscpp/zlib/: zlib.vcproj
ossfuzz/: Makefile.am  bzip_fuzzer.cc  deflate_fuzzer.cc
src/: Makefile.am  adc.c  adc.h  adcdecompress.c  adler32.c  adler32.h  adler32sum.c  ascii7.c  ascii7.h  ascii7decompress.c  assorted_adc.c  assorted_adc.h  assorted_adler32.c  assorted_adler32.h  assorted_ascii7.c  assorted_ascii7.h  assorted_bit_stream.c  assorted_bit_stream.h  assorted_bzip.c  assorted_bzip.h  assorted_crc32.c  assorted_crc32.h  assorted_crc64.c  assorted_crc64.h  assorted_deflate.c  assorted_deflate.h  assorted_fletcher32.c  assorted_fletcher32.h  assorted_fletcher64.c  assorted_fletcher64.h  assorted_getopt.c  assorted_getopt.h  assorted_huffman_tree.c  assorted_huffman_tree.h  assorted_i18n.h  assorted_libcerror.h  assorted_libcfile.h  assorted_libcnotify.h  assorted_libcstring.h  assorted_libcsystem.h  (+89 more)
tests/: Makefile.am  assorted_test_adc.c  assorted_test_adler32.c  assorted_test_ascii7.c  assorted_test_bit_stream.c  assorted_test_bzip.c  assorted_test_crc32.c  assorted_test_crc64.c  assorted_test_deflate.c  assorted_test_fletcher32.c  assorted_test_fletcher64.c  assorted_test_huffman_tree.c  assorted_test_libcerror.h  assorted_test_libcnotify.h  assorted_test_lzfse.c  assorted_test_lzfu.c  assorted_test_lzma.c  assorted_test_lzvn.c  assorted_test_lzx.c  assorted_test_macros.h  assorted_test_memory.c  assorted_test_memory.h  assorted_test_unused.h  assorted_test_xor32.c  assorted_test_xor64.c  runtests.sh  syncsharedlibs.sh  test_tools.ps1  test_tools.sh
tests/data/: bzip.1
(+28 files in other folders)
