MSVSCPP_FILES = \
	adler32sum/adler32sum.vcproj \
	ascii7decompress/ascii7decompress.vcproj \
	crc32sum/crc32sum.vcproj \
	crc64sum/crc64sum.vcproj \
	fletcher32sum/fletcher32sum.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfwnt/libfwnt.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	lzfudecompress/lzfudecompress.vcproj \
	lznt1decompress/lznt1decompress.vcproj \
	lzxpressdecompress/lzxpressdecompress.vcproj \
	mssearchdecode/mssearchdecode.vcproj \
	rc4crypt/rc4crypt.vcproj \
	xor32sum/xor32sum.vcproj \
	xor64sum/xor64sum.vcproj \
	zcompress/zcompress.vcproj \
	zdecompress/zdecompress.vcproj \
	zlib/zlib.vcproj \
	assorted.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

