MSVSCPP_FILES = \
	adcdecompress/adcdecompress.vcproj \
	adler32sum/adler32sum.vcproj \
	ascii7decompress/ascii7decompress.vcproj \
	assorted_test_adler32/assorted_test_adler32.vcproj \
	assorted_test_ascii7/assorted_test_ascii7.vcproj \
	assorted_test_bit_stream/assorted_test_bit_stream.vcproj \
	assorted_test_bzip/assorted_test_bzip.vcproj \
	assorted_test_crc32/assorted_test_crc32.vcproj \
	assorted_test_crc64/assorted_test_crc64.vcproj \
	assorted_test_deflate/assorted_test_deflate.vcproj \
	assorted_test_fletcher32/assorted_test_fletcher32.vcproj \
	assorted_test_fletcher64/assorted_test_fletcher64.vcproj \
	assorted_test_huffman_tree/assorted_test_huffman_tree.vcproj \
	assorted_test_lzfu/assorted_test_lzfu.vcproj \
	assorted_test_lzma/assorted_test_lzma.vcproj \
	assorted_test_xor32/assorted_test_xor32.vcproj \
	assorted_test_xor64/assorted_test_xor64.vcproj \
	banalyze/banalyze.vcproj \
	bz2decompress/bz2decompress.vcproj \
	bzip2/bzip2.vcproj \
	crc32sum/crc32sum.vcproj \
	crc64sum/crc64sum.vcproj \
	fletcher32sum/fletcher32sum.vcproj \
	fletcher64sum/fletcher64sum.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcrypto/libfcrypto.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmos/libfmos.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwevt/libfwevt.vcproj \
	libfwnt/libfwnt.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	lzfsedecompress/lzfsedecompress.vcproj \
	lzfudecompress/lzfudecompress.vcproj \
	lzmadecompress/lzmadecompress.vcproj \
	lznt1decompress/lznt1decompress.vcproj \
	lzvndecompress/lzvndecompress.vcproj \
	lzxdecompress/lzxdecompress.vcproj \
	lzxpressdecompress/lzxpressdecompress.vcproj \
	mssearchdecode/mssearchdecode.vcproj \
	plistinfo/plistinfo.vcproj \
	rc4crypt/rc4crypt.vcproj \
	serpentcrypt/serpentcrypt.vcproj \
	unicodetouch/unicodetouch.vcproj \
	wevtinfo/wevtinfo.vcproj \
	winregsave/winregsave.vcproj \
	winshellfolder/winshellfolder.vcproj \
	winshelllink/winshelllink.vcproj \
	xor32sum/xor32sum.vcproj \
	xor64sum/xor64sum.vcproj \
	zcompress/zcompress.vcproj \
	zdecompress/zdecompress.vcproj \
	zlib/zlib.vcproj \
	assorted.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

